# tezapi

./: LICENSE  example.py  pyproject.toml  readme.md  schemas.py
aioapi/: handle.py  httpexception.py  responses.py  routes.py  schemas.py  templating.py
aioapi/exceptions/: __init__.py  base_exceptions.py
aiohttp_api/: __init__.py  handle.py  routes.py  schemas.py  templating.py
aiohttp_api/exceptions/: base_exceptions.py
example/: main.py
examples/: example_schemas.py  main.py  router1.py
examples/templates/: home.html
my_project/: default.py  main.py  my_exceptions.py
src/: handle.py  routes.py  schemas.py  templating.py
src/aioapi/: routes.py  schemas.py
src/aioapi/exceptions/: base_exceptions.py
src/exceptions/: base_exceptions.py
src/tezapi/: templating.py
src/tezapi/exceptions/: apiexception.py
tests/: main.py
tests/templates/: home.html
tezapi/: __init__.py  app.py  handle.py  responses.py  routes.py  schemas.py
tezapi/exceptions/: __init__.py  apiexception.py  base_exceptions.py
